@dev add deploy.sh